# Thesis

iot-node/: .gitignore  CMakeCache.txt  CMakeLists.txt  sdkconfig
iot-node/components/max3010x/: CMakeLists.txt
iot-node/main/: CMakeLists.txt  main.cc
iot-node/main/circular_buffer/: circular_buffer.cc  circular_buffer.h
iot-node/main/data_processor/: data_processor.cc  data_processor.h
iot-node/main/gateway/: gateway.cc  gateway.h  http_server.c  http_server.h  mqtt5_lib.c  mqtt5_lib.h  mqtt_lib.c  mqtt_lib.h  wifi_manager.c  wifi_manager.h
iot-node/main/inference/: inference.cc  inference.h  model.cc  model.h
iot-node/main/main_module/: main_function.cc  main_function.h
iot-node/main/read_max30102/: read_max30102.cc  read_max30102.h
iot-node/main/tasks/: tasks.cc  tasks.h
iot-platform/client/: package-lock.json  package.json
iot-platform/client/src/: types.ts
iot-platform/client/src/app/: page.tsx
iot-platform/client/src/components/: AuthForm.tsx  ClientSideWrapper.tsx  DashboardLayout.tsx  DeviceRegistration.tsx  Layout.tsx  Sidebar.tsx  Toast.tsx  UserInfo.tsx  WebSocket.tsx
iot-platform/client/src/hooks/: useAuth.ts
iot-platform/server/: .env  package-lock.json  package.json
iot-platform/server/src/: server.js
iot-platform/server/src/controllers/: index.js  packetData.controller.js
ppg-signal-labeling-tool/: ppg-signal-labeling-tool.py
train-model-detect-ppg/: train-model-detect-ppg.ipynb
train-model-detect-ppg/dataset/ppg_labeled/: x_test.npy  y_test.npy  y_train.npy
train-model-detect-ppg/dataset/ppg_set/: ppg_set.npy
(+21 files in other folders)
